--- a/www/index.html
+++ b/www/index.html
@@ -131,6 +131,18 @@
     </nav>
 	<article id='mappage'>
 		<div id="eventmap" style="border: 0;height: 100%;"></div>
+		<label style="position: absolute; top: 10px; right: 10px;">
+			<input type="checkbox" id="notifyme" style="-ms-transform: scale(2);-moz-transform: scale(2);-webkit-transform: scale(2);-o-transform: scale(2);padding: 20px;margin-right: 10px;">
+			Notify Me
+		</label>
+	</article>
+	
+	<nav>
+      <h1>Navigate</h1>
+    </nav>
+	<article id='navigate'>
+		
+		<div id="eventmap" style="border: 0;height: 100%;"></div>
 	</article>
     
 	<script src="js/jquery-2.1.3.js"></script>
@@ -139,6 +151,7 @@
     <script src="js/leaflet.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/notification.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
     <script type="text/javascript" src="js/routing.js"></script>
   </body>
