added notification page, user can look all his notifications and remove them

--- a/www/index.html
+++ b/www/index.html
@@ -139,7 +139,19 @@
 
 		</div>
 	</article>
-
+	<nav>
+      <h1>My Notifications</h1>
+    </nav>
+    <article id='notifications'>
+		<ul id="notificationlist" class='list'>
+			<li>
+				<div>
+					<h3>No Notifications</h3>
+				</div>
+			</li>
+		</ul>
+	</article>
+	
     <nav>
       <h1>My Contacts</h1>
     </nav>
