--- a/www/index.html
+++ b/www/index.html
@@ -21,14 +21,11 @@
     </nav>
 	<article id='myhsl'>
 		<section>
-			<div style="white-space:nowrap">
+			<div style="white-space:nowrap;height: 50px;">
 			<aside style="display:inline;">
-				<img src="img/hslogo.png" height="20px" id="logo">
+				<img src="img/hsl.png" style="height:50px;margin-top: 5px;" id="logo">
 			</aside>
-			<h2 id="namenavi" style="display:inline; white-space:nowrap;"> My HSL Navigator</h2>
-			<!--If possible add the name and profile photo of the person here-->
-			<aside>
-			</aside>
+			<h2 id="namenavi" style="display:inline; white-space:nowrap;line-height: 60px;font-size: 160%;"> My HSL Navigator</h2>
 			</div>
 	
 			<ul id='locationlist' class='list'>
@@ -36,13 +33,13 @@
 				<aside style="display:inline;">
 					<img src="img/target.png" height="40px">
 				</aside>
-				<p style="display:inline; white-space:nowrap; font-size:140%;" >Bring me to...</p>
+				<div style="display:inline; white-space:nowrap; font-size:140%;line-height: 40px;" >Bring me to...</div>
 			</li>
 			<li class='comp'>
 				<aside style="display:inline;">
 					<img src="img/homelogo.png" height="40px">
 				</aside>
-				<p style="display:inline; white-space:nowrap; font-size:140%;" >HOME</p>
+				<div style="display:inline; white-space:nowrap; font-size:140%;line-height: 40px;" >HOME</div>
 			</li>
 			
 			<li class='comp'>
@@ -106,13 +103,8 @@
       <h1>Events</h1>
     </nav>
     <article id='events'>
-		<div style="white-space:nowrap">
-          <aside style="display:inline;">
-            <img src="img/hslogo.png" style="display:inline;height:20px;" id="logo" />
-          </aside>
-          <h2 style="display:inline; white-space:nowrap;">Facebook events</h2>
-        </div>
         <ul id="facebookevents" class='list'>
+			<li><div><h3>No Events</h3></div></li>
         </ul>
 	</article>
     <nav>
@@ -128,15 +120,14 @@
       <h1>Edit Place</h1>
     </nav>
 	<article id='editplace'>
-		<img id="placeimage" style="width: 40px;" ></img>
-		<input type="text" id="placelabel" placeholder="Description"/>
-		<div style="position:absolute; right:0px; top:0px">
-		<input type="button" value="OK" id="saveplace" />
-		<input type="button" value="Cancel" id="cancelplaceedit"/>
-		</div>
+		<div style="width: 100%; position: absolute; left:0px; top:0px;z-index: 1;height: 40px;background-color: #D3D3D3;">
+			<img id="placeimage" style="height: 30px;margin-top: 5px;float:left;" ></img>
+			<input type="text" id="placelabel" placeholder="Description" style="border-color:red;background-color: #D3D3D3;padding: 0px;float: left;height: 100%;"/>
+			<input type="button" value="OK" id="saveplace" style="float: right;height: 40px;margin-right: 10px;"/>
+			<input type="button" value="Cancel" id="cancelplaceedit" style="float: right;height: 40px;"/>
 		</div>
 		<div id="editplacemap" style="border: 0;height: 100%;">
-			<input id="placeinput" placeholder="Search Address..." style="z-index: 1; background-color: white; position: absolute; top: 10px; right: 10px; left: 10px; margin: auto; width: 50%;border-radius: 70px;padding: 10px;font-size: 40px;" type="text">
+			<input id="placeinput" placeholder="Search Address..." style="z-index: 1; background-color: white; position: absolute; top: 50px; right: 10px; left: 10px; margin: auto; width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;" type="text">
 		</div>
 	</article>
 	<nav>
@@ -155,25 +146,39 @@
     <nav>
       <h1>My Contacts</h1>
     </nav>
-    <article id='contacts'>Link to Contacts from FB that use tha app if possible All other menu items use the same patern -&gt; add
-    the id in the article after the nav element and also keep same id in the script that composes the menu</article>
-	
+    <article id='contacts'><ul id="notificationlist" class='list'>
+			<li>
+				<div>
+					<h3>No Contacts</h3>
+				</div>
+			</li>
+		</ul>
+	</article>
 	<nav>
       <h1>Map</h1>
     </nav>
 	<article id='mappage'>
-		<div id="eventmap" style="border: 0;height: 100%;"></div>
+		<div id="eventmap" style="border: 0;height: 100%;">
+			<input id="destinationinput" placeholder="Search Address..." style="z-index: 1; background-color: white; position: absolute; top: 50px; right: 10px; left: 10px; margin: auto; width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;" type="text">
+		</div>
 		<label style="position: absolute; top: 10px; right: 10px;">
 			<input type="checkbox" id="notifyme" style="-ms-transform: scale(2);-moz-transform: scale(2);-webkit-transform: scale(2);-o-transform: scale(2);padding: 20px;margin-right: 10px;">
 			Notify Me
 		</label>
+		<div id="routeheader" style="position: absolute; bottom: 82px; left: 0px; background-color: rgba(135, 135, 135, 0.7); color: rgb(46, 46, 46); width: 100%; height: 30px; text-align: center; font-size: 140%;">
+			<img id="routescrollprev" style="float: left;margin-top: 0px;margin-left: 5px;height: 30px;" src="img/scroll-arrow-left.png">
+			<span id="routetime" style="line-height: 30px;font-size:100%"></span>
+			<img id="routescrollnext" style="float: right;margin-top: 0px;margin-right: 5px;height: 30px;" src="img/scroll-arrow-right.png">
+		</div>
+		<div id="routeitem" style="position: absolute; bottom: 0px; left: 0px; background-color: rgba(192, 192, 192, 0.67); color: rgb(46, 46, 46); width: 100%; height: 82px;">
+		
+		</div>
 	</article>
 	
 	<nav>
       <h1>Navigate</h1>
     </nav>
 	<article id='navigate'>
-		
 		<div id="eventmap" style="border: 0;height: 100%;"></div>
 	</article>
     
