--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/jquery-ui.min.css" />
 	<link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
 	<link rel="stylesheet" href="css/jquery-ui.theme.min.css" />
+	<link rel="stylesheet" href="css/jquery-ui-timepicker-addon.css" />
 
   </head>
   <body>
@@ -102,7 +103,7 @@
     <nav>
       <h1>Events</h1>
     </nav>
-    <article id='events'>
+    <article id='events' style="background-color: white;">
         <ul id="facebookevents" class='list'>
 			<li><div><h3>No Events</h3></div></li>
         </ul>
@@ -127,13 +128,13 @@
 			<input type="button" value="Cancel" id="cancelplaceedit" style="float: right;height: 40px;"/>
 		</div>
 		<div id="editplacemap" style="border: 0;height: 100%;">
-			<input id="placeinput" placeholder="Search Address..." style="z-index: 1; background-color: white; position: absolute; top: 50px; right: 10px; left: 10px; margin: auto; width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;" type="text">
+			<input id="placeinput" placeholder="Search Address..." style="z-index: 9999; background-color: white; position: absolute; top: 50px; right: 10px; left: 10px; margin: auto; width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;" type="text">
 		</div>
 	</article>
 	<nav>
       <h1>My Notifications</h1>
     </nav>
-    <article id='notifications'>
+    <article id='notifications' style="background-color: white;">
 		<ul id="notificationlist" class='list'>
 			<li>
 				<div>
@@ -146,7 +147,7 @@
     <nav>
       <h1>My Contacts</h1>
     </nav>
-    <article id='contacts'><ul id="notificationlist" class='list'>
+    <article id='contacts' style="background-color: white;"><ul class='list' >
 			<li>
 				<div>
 					<h3>No Contacts</h3>
@@ -159,12 +160,20 @@
     </nav>
 	<article id='mappage'>
 		<div id="eventmap" style="border: 0;height: 100%;">
-			<input id="destinationinput" placeholder="Search Address..." style="z-index: 1; background-color: white; position: absolute; top: 50px; right: 10px; left: 10px; margin: auto; width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;" type="text">
 		</div>
-		<label style="position: absolute; top: 10px; right: 10px;">
+		<label style="position: absolute; top: 120px; right: 40px;">
 			<input type="checkbox" id="notifyme" style="-ms-transform: scale(2);-moz-transform: scale(2);-webkit-transform: scale(2);-o-transform: scale(2);padding: 20px;margin-right: 10px;">
 			Notify Me
 		</label>
+		<div id="datetimeheader" style="position: absolute; top: 10px; left: 0px;  color: rgb(46, 46, 46); width: 100%; height: 30px; text-align: center; font-size: 140%;">
+			<input id="destinationinput" placeholder="Search Address..." style="z-index: 9999; background-color: white;top: 50px; right: 10px; left: 10px; margin: auto; width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;" type="text">
+			<div style="z-index: 9999; background-color: white;top: 50px; right: 10px; left: 10px; margin: auto; margin-top: 10px;width: 80%;border-radius: 70px;padding: 10px;font-size: 15px;">
+				<input type="text" id="jqstartdate" style="margin-left: 20px;"/>
+				<input type="text" id="jqstarttime" style="float: right;margin-right: 20px;"/>
+				<span id="startdate" style="margin-left: 20px;">Today</span>
+				<span id="starttime" style="float: right;margin-right: 20px;">Now</span>
+			</div>
+		</div>
 		<div id="routeheader" style="position: absolute; bottom: 82px; left: 0px; background-color: rgba(135, 135, 135, 0.7); color: rgb(46, 46, 46); width: 100%; height: 30px; text-align: center; font-size: 140%;">
 			<img id="routescrollprev" style="float: left;margin-top: 0px;margin-left: 5px;height: 30px;" src="img/scroll-arrow-left.png">
 			<span id="routetime" style="line-height: 30px;font-size:100%"></span>
@@ -184,6 +193,7 @@
     
 	<script src="js/jquery-2.1.3.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/jquery-ui-timepicker-addon.js"></script>
     <script src="js/chocolatechip-3.8.7.min.js"></script>
     <script src="js/chui-3.8.5.min.js"></script>
     <script src="js/leaflet.js"></script>
